# book_shop_drf_p23

./: .gitignore  Makefile  TODO  pyproject.toml
apps/: __init__.py  urls.py
apps/shared/: models.py  paginations.py  utils.py
apps/shops/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/shops/migrations/: 0001_initial.py  0002_book_country_review.py  0003_book_author_review_book.py  0004_delete_country.py  0005_book_image_alter_book_audiobook_price_and_more.py  0006_alter_book_features.py  0007_alter_book_reviews_count.py
apps/users/: admin.py  email_service.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/fixtures/: country.json
apps/users/management/commands/: generate_data.py
apps/users/migrations/: 0001_initial.py  0002_author_remove_user_first_name_remove_user_last_name_and_more.py  0003_country_alter_address_country.py  0004_remove_address_billing_address_and_more.py
apps/users/templates/: email.html
root/: asgi.py  celery.py  drf_settings.py  settings.py  urls.py  wsgi.py
